<resources>
    <string name="app_name">Demo Project</string>

    <!-- Splash -->
    <string name="loading">Loading</string>

    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="button_login">Log in</string>
    <string name="button_register">Register</string>

    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register_email">Enter email</string>
    <string name="register_password">Enter password</string>
    <string name="register_password_repeat">Repeat password</string>
    <string name="register_name">Enter name</string>
    <string name="register_country">Select country</string>

    <string name="button_create">Create account</string>

    <!-- Main menu -->
    <string name="main_title">Main menu</string>
    <string name="welcome">Welcome %s!</string>

    <!-- Errors -->
    <string name="error_login">Email or password incorrect</string>
    <string name="error_password">Review the password please</string>
    <string name="error_email">Enter a valid email</string>

    <string name="error_fields">Please enter all fields</string>
    <string name="menu_kitchen">Cooking</string>
    <string name="menu_book">Learn</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_fitness">Fitness</string>
    <string name="menu_health">Health</string>
    <string name="menu_title">What do you want to do?</string>
</resources>
